unit 12 to multi-regression; unit 13 before effect size of oneway ANOVA““ ””

--- a/11-Comparing-two-means.qmd
+++ b/11-Comparing-two-means.qmd
@@ -639,9 +639,7 @@ We just need to figure out what this standard error estimate actually is. This i
 
 [其他技術細節[^11-comparing-two-means-12]]
 
-[^11-comparing-two-means-12]: 數學上，我們可以這樣寫：$$w_1=N_1-1$$ $$w_2=N_2-1$$ 現在我們已經對每個樣本分配了權重，我們通過取兩個變異數估計值的加權平均值，$\hat{sigma}_{1}^{2}$ 和 $\hat{sigma}_{2}^{2}$，計算變異數的集體估計值。$$\hat{\sigma}_p^2=\frac{w_1\hat{\sigma}_1^2+w_2\hat{\sigma}_2^2}{w_1+w_2}$$ 最後，我們通過取平均數的平方根，將集體變異數估計轉換為集體標準差估計。$$\hat{\sigma}_p=\sqrt{\frac{w_1\hat{\sigma}_1^2+w_2\hat{\sigma}_2^2}{w_1+w_2}}$$ 如果你在這個方程中心理上代入 $(w_1 = N_1 - 1)$ 和 $w_2 = N_2 - 1$，你會得到一個非常醜陋的公式。這個公式似乎是描述集體標準差估計的“標準”方式，但這不是我最喜歡思考集體標準差的方法。我更喜歡這樣思考。我們的資料集實際上對應於一組 N 個觀測值，這些觀測值被分成兩個組。因此，讓我們使用符號 $X_{ik}$ 來表示第 k 個教程組中第 i 個學生所獲得的成績。也就是說，$(X_{11}$ 是 Anastasia 班上第一個學生獲得的成績，$X_{21}$ 是她的第二個學生，以此類推。我們有兩個不同的群體平均值 $\bar{X}_1$ 和 $\bar{X}_2$，我們可以使用符號 $\bar{X}_k$ "一般化地"引用它們，即第 k 個教程組的平均成績。到目前為止，一切都很好。現在，由於每個學生都屬於兩個教程中的一個，我們可以將他們的偏差描述為差異$$X_{ik}-\bar{X}_k$$ 那為什麼不使用這些偏差（即每個學生的成績與他們的教程平均成績之間的差異）？請記住，方差只是一堆平方偏差的平均值，所以我們來這麼做。數學上，我們可以寫成以下式子：
-$$\frac{\sum_{ik}(X_{ik}-\bar{X}_k)^2}{N}$$
-其中符號"$\sum_{ik}$"是一種懶惰的方式，意思是“通過查看所有教程中的所有學生來計算總和”，因為每個"$_{ik}$"對應一個學生。$^a$ 但是，正如我們在 @sec-Estimating-unknown-quantities-from-a-sample 中看到的，通過除以 N 計算變異數會產生一個偏差的樣本方差估計值。因此，以前我們需要除以 $N - 1$ 來修正這個偏差。然而，正如我當時提到的，這種偏差存在的原因是因為變異數估計依賴於樣本均值，並且如果樣本均值與母群均值不等，它可能會有系統地偏移我們對變異數的估計。但是這次，我們依賴於兩個樣本均值！這是否意味著我們有更多的偏差？是的，沒錯。這表示我們現在需要除以 $(N-2)$ 而不是 $(N-1)$，以計算我們的共變異數估計值。因此，我們的公式是：$$\hat{\sigma}_p^2=\frac{\sum_{ik}(X_{ik}-\bar{X}_k)^2}{N-2}$$ 最後，如果你對它取平方根，就會得到 $\hat{\sigma}_p$，即共同標準差的估計值。換句話說，共同標準差的計算並不特別，與計算標準差的方式沒有太大的不同。 <br /> --- <br />$^a$ 更正式的符號將在 @sec-Comparing-several-means-one-way-ANOVA 介紹。
+[^11-comparing-two-means-12]: 加權值的數學公式通常是：$$w_1=N_1-1$$ $$w_2=N_2-1$$ 對每個樣本分配加權值之後，就能用兩個變異數估計值的加權，$\hat{sigma}_{1}^{2}$ 和 $\hat{sigma}_{2}^{2}$，計算變異數的加權估計值。$$\hat{\sigma}_p^2=\frac{w_1\hat{\sigma}_1^2+w_2\hat{\sigma}_2^2}{w_1+w_2}$$ 最後再取估計值的平方根，將加權變異數估計值轉換為加權標準差估計。$$\hat{\sigma}_p=\sqrt{\frac{w_1\hat{\sigma}_1^2+w_2\hat{\sigma}_2^2}{w_1+w_2}}$$ 在這個方程式中代入 $(w_1 = N_1 - 1)$ 和 $w_2 = N_2 - 1$，會得到一個非常醜陋的公式。這個公式似乎是描述加權標準差估計值的“標準”公式，但這不是我偏好思考加權標準差的方法。<br>我喜歡的思考方式是，這份資料集來自 N 個觀測值，再被分成兩組。所以，可以用 $X_{ik}$ 代表第 k 位助教帶的第 i 位學生的成績。也就是說，$(X_{11}$ 是 Anastasia 帶的第一位學生成績，$X_{21}$ 是她帶的第二位學生，以此類推。如此會有兩個不同的組平均值 $\bar{X}_1$ 和 $\bar{X}_2$，使用 $\bar{X}_k$ 就能指稱這兩組，也就是第 k 輔導班的平均成績。<br>還能跟上的話，我們繼續談離均差：由於每位學生必參加其中一班，就可以將每位學生成績與平均的差異寫成$$X_{ik}-\bar{X}_k$$ 那為什麼不使用這套符號代表每位學生的成績與所在輔導班的平均成績之差異？請記住，離均差平方只是一群離均差平方後的平均值，所以可以用這個數學式子表達：$$\frac{\sum_{ik}(X_{ik}-\bar{X}_k)^2}{N}$$<br>其中符號$\sum_{ik}$是一種偷懶的記號方式，意思是“加總每個班的所有學生成績”，因為每個"$_{ik}$"對應一位學生。$^a$ 但是，正如 @sec-Estimating-unknown-quantities-from-a-sample 學到的，除以 $n$ 算出的變異數是一個有偏誤的樣本變異數估計值。因此，我們需要除以 $n - 1$ 以修正偏誤。同時也提到，這種偏誤的來源是變異數估計依賴於樣本平均值，並且如果樣本平均值不等於母群平均值，極可能造成變異數估計值的系統性偏誤。但是在獨立組設計，一共有兩個樣本平均值！這是否表示會有更大的偏誤？是的，沒錯。所以這裡需要除以 $(n-2)$ 而不是 $(n-1)$，才是計算變異數估計值的正確方法。所以公式要改成：$$\hat{\sigma}_p^2=\frac{\sum_{ik}(X_{ik}-\bar{X}_k)^2}{N-2}$$ 最後再取平方根，就會得到加權標準差的估計值  $\hat{\sigma}_p$。所以說，加權標準差的計算方法並不特別，與計算單一樣本標準差的方式沒有太大不同。 <br /> --- <br/>$^b$ 更正式的符號將在 @sec-Comparing-several-means-one-way-ANOVA 介紹。
 
 
 <!--- In the original "Student t檢定", we make the assumption that the two groups have the same population standard deviation. That is, regardless of whether the population means are the same, we assume that the population standard deviations are identical, $\sigma_1 = \sigma_2$. Since we're assuming that the two standard deviations are the same, we drop the subscripts and refer to both of them as $\sigma$. How should we estimate this? How should we construct a single estimate of a standard deviation when we have two samples? The answer is, basically, we average them. Well, sort of. Actually, what we do is take a *weighted* average of the *variance* estimates, which we use as our **pooled estimate of the variance**. The weight assigned to each sample is equal to the number of observations in that sample, minus 1.
